# anvl

./: AGENTS.md  Cargo.toml  README.md  install.sh  tag.sh
.github/workflows/: release.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/workspace/: git.rs  terminal.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  main.rs
crates/tui/src/ui/: footer.rs
crates/tui/src/ui/screens/: home.rs  workspace.rs
crates/tui/src/ui/widgets/: mod.rs  tile_grid.rs
