[package]
name = "anvl_core"
version = "0.2.3"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }
anyhow = "1"
thiserror = "2"
parking_lot = "0.12"
portable-pty = "0.9"
base64 = "0.22"
serde_json = "1"
futures = "0.3"
