[package]
name = "tui"
version = "0.2.3"
edition = "2021"

[[bin]]
name = "anvl"
path = "src/main.rs"

[dependencies]
protocol = { path = "../protocol" }
anvl_core = { path = "../core" }
anyhow = "1"
base64 = "0.22"
vt100 = "0.15"
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
unicode-width = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
